syntax = "proto3";

package installs.v1.runner.v1;

import "context/v1/runner_type.proto";
import "installs/v1/account_settings.proto";
import "installs/v1/runner/v1/aks_cluster.proto";
import "installs/v1/runner/v1/ecs_cluster.proto";
import "installs/v1/runner/v1/eks_cluster.proto";
import "installs/v1/sandbox_settings.proto";
import "tagger/tagger.proto";
import "validate/validate.proto";

option go_package = "github.com/powertoolsdev/mono/pkg/types/workflows/installs/v1/runner/v1";

// DeprovisionRunnerRequest represents a workflow input for creating a deployment
message DeprovisionRunnerRequest {
  string org_id = 1 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
  string app_id = 2 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];
  string install_id = 3 [
    (validate.rules).string.len = 26,
    (tagger.tags) = "faker:\"shortID\""
  ];

  // credentials for uninstalling from KubeCluster
  EKSClusterInfo eks_cluster_info = 4;

  // credentials for uninstalling from ECSCluster
  ECSClusterInfo ecs_cluster_info = 5;

  AKSClusterInfo aks_cluster_info = 6;

  string region = 7 [(tagger.tags) = "faker:\"oneof: us-west-2\""];

  context.v1.RunnerType runner_type = 8;

  // contextual information for installing the container service
  installs.v1.AWSSettings aws_settings = 10;
  installs.v1.AzureSettings azure_settings = 11;
  installs.v1.SandboxSettings sandbox_settings = 12;
}

// StartResponse returns the response from a deployment workflow
message DeprovisionRunnerResponse {}
